--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "rm -rf dist && webpack --mode production"
   },
   "license": "MIT",
   "devDependencies": {
